Update documentation for 0.8.0 release